# magicbot-gen1_sdk

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: magic_gen1_sdkConfig.cmake.in  magic_gen1_sdkTargets.cmake  magic_m1_sdkConfig.cmake.in  magic_m1_sdkTargets.cmake  magicbot_gen1_sdkConfig.cmake.in  magicbot_gen1_sdkTargets.cmake
doc/source/: conf.py  index.rst
doc/source/api/: audio_reference.md  high_level_motion_reference.md  low_level_motion_reference.md  monitor_reference.md  robot_reference.md  sensor_reference.md
doc/source/cpp_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
doc/source/env/: env_reference.md
doc/source/examples/: 1.high_level_motion_example.md  2.low_level_motion_example.md  3.sensor_example.md  4.audio_example.md  5.monitor_example.md  audio_example.md  high_level_motion_example.md  low_level_motion_example.md  monitor_example.md  sensor_example.md
doc/source/overview/: 1.overview_reference.md  2.architecture_reference.md  3.service_reference.md  4.quick_start_reference.md
doc/source/python_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
doc/source/service/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md
example/: CMakeLists.txt
example/audio_example/: CMakeLists.txt  README.txt  audio_example.cpp
example/cmake_example/: CMakeLists.txt  cmake_example.cpp
example/cpp/audio_example/: CMakeLists.txt  README.txt  audio_example.cpp
example/cpp/high_level_motion_example/: CMakeLists.txt  README.txt  high_level_motion_example.cpp
example/cpp/low_level_motion_example/: CMakeLists.txt  README.txt  low_level_motion_example.cpp
example/cpp/monitor_example/: CMakeLists.txt  monitor_example.cpp
example/cpp/sensor_example/: CMakeLists.txt  sensor_example.cpp
example/cpp/slam_navigation_example/: CMakeLists.txt  navigation_example.cpp  slam_example.cpp
example/high_level_motion_example/: CMakeLists.txt  README.txt  balance_stand_example.cpp  execute_trick_action_example.cpp  joy_control_example.cpp  recovery_stand_example.cpp
example/low_level_motion_example/: CMakeLists.txt  low_level_motion_example.cpp
example/monitor_example/: CMakeLists.txt  monitor_example.cpp
example/pybind11_test/: test_audio_stream.py  test_camerainfo.py  test_hand_structures.py  test_image.py  test_imu.py  test_joint_structures.py  test_joystick_command.py  test_nav_status.py  test_navigation_structures.py  test_odometry.py  test_pointcloud2.py  test_pointfield.py  test_precision_comparison.py  test_robot_state.py  test_spatial_structures.py  test_status.py  test_tts_command.py
example/python/: README.md  audio_example.py  high_level_motion_example.py  low_level_motion_example.py  monitor_example.py  navigation_example.py  sensor_example.py  slam_example.py
example/sensor_example/: CMakeLists.txt  sensor_example.cpp
include/: magic_audio.h  magic_err.h  magic_motion.h  magic_robot.h  magic_sdk_version.h  magic_sensor.h  magic_slam_navigation.h  magic_state_monitor.h  magic_type.h
